- 4 verschiedene Grasfelder ( damit die normalen Felder nicht zu eintönig werden ) - Neues Array für die Grasfelder, was ( im setBoard ) mit Zufälligen Zahlen zwischen 1 und 4 vollgefüllt werden für die jeweilige Form - checkBoard wurde dementsprechend überarbeitet - Alle Buttons im App haben jetzt eine einheitliche Farbe - ImageButtons sind jetzt ImageViews, weil die Bilder auf den ImageButtons nicht richtig skaliert wurden
Update (13.06):
- Im Layout wurden neue Felder hinzugefügt ( Boden / Erde )
- Riskfelder werden im checkBoard jetzt auch berücksichtigt und überschrieben. ( Bugfixing )
- Code Optimiert ( Schleife eingebaut ) // Codes aufgeräumt ( formatiert )

--- a/app/src/main/res/layout/activity_dice.xml
+++ b/app/src/main/res/layout/activity_dice.xml
@@ -4,28 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="t_industries.monstersandportals.DiceActivity"
-    android:weightSum="1">
+    android:weightSum="1"
+    tools:context="t_industries.monstersandportals.DiceActivity">
 
 
     <ImageView
         android:id="@+id/dicepreview"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        app:srcCompat="@drawable/d0"
-        android:scaleType="centerInside"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="195dp" />
+        android:layout_marginTop="195dp"
+        android:scaleType="centerInside"
+        app:srcCompat="@drawable/d0" />
 
     <Button
         android:id="@+id/b_roll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/roll"
-        android:layout_marginTop="22dp"
         android:layout_below="@+id/dicepreview"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="22dp"
+        android:text="@string/roll" />
 
 
 </RelativeLayout>
