--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorRed">#f00000</color>
     <color name="colorYellow">#F3AE1B</color>
     <color name="colorBlack">#F111</color>
+    <color name="colorSteelBlue">#4682b4</color>
 </resources>
