--- a/app/src/main/res/layout/anleitung_alt.xml
+++ b/app/src/main/res/layout/anleitung_alt.xml
@@ -2,12 +2,11 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:layout_editor_absoluteY="25dp"
+    android:orientation="vertical"
     tools:layout_editor_absoluteX="0dp"
-    >
+    tools:layout_editor_absoluteY="25dp">
 
 
     <Button
@@ -15,16 +14,16 @@
         android:layout_width="112dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Zurück =)"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        android:layout_marginRight="0dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:text="Zurück =)"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:layout_constraintVertical_bias="0.947" />
 
     <LinearLayout
@@ -32,17 +31,17 @@
         android:layout_width="wrap_content"
         android:layout_height="272dp"
         android:layout_marginBottom="14dp"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
+        android:layout_marginLeft="0dp"
+        android:layout_marginStart="8dp"
 
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/backMenuBtn"
+        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.555">
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/TextView01"
@@ -132,18 +131,18 @@
             android:id="@+id/TextView02"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="8dp"
+            android:layout_marginStart="16dp"
             android:text="Credits:"
             android:textAllCaps="false"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/textAreaScroller2"
             app:layout_constraintHorizontal_bias="0.157"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textAreaScroller"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintRight_toRightOf="parent"></TextView>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textAreaScroller"></TextView>
 
         <ScrollView
             android:id="@+id/textAreaScroller2"
@@ -179,8 +178,6 @@
         </ScrollView>
 
     </LinearLayout>
-
-
 
 
 </android.support.constraint.ConstraintLayout>
