--- a/app/src/main/res/layout/activity_endConnectionOpponent.xml
+++ b/app/src/main/res/layout/activity_endConnectionOpponent.xml
@@ -15,7 +15,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/gegnerBeendet"
+        android:background="@drawable/gegner_beendet"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
